# vprogs

./: Cargo.toml
dsl/: Cargo.toml
dsl/context/: Cargo.toml
dsl/context/src/: lib.rs
dsl/macros/: Cargo.toml
dsl/macros/codegen/: context_codegen.rs  diff_codegen.rs  resource_codegen.rs
dsl/macros/src/: attributes.rs  lib.rs  resource.rs  resource_derive.rs
dsl/resource/: Cargo.toml
dsl/resource/src/: lib.rs
