#unnecessary ?
[package]
name = "vprogs-dsl-context"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "TransactionContextExt trait and helpers for vprogs-dsl"

[dependencies]
vprogs-core = { path = "../../core" }
vprogs-transaction-runtime = { path = "../../transaction-runtime" }
